--- a/package.json
+++ b/package.json
@@ -12,21 +12,41 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.83.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.0",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"highlight.js": "^11.10.0",
+		"jszip": "^3.10.1",
+		"lucide-svelte": "^0.451.0",
+		"mode-watcher": "^0.4.1",
+		"paneforge": "^0.0.6",
+		"svelte-headless-table": "^0.18.2",
+		"svelte-highlight": "^7.7.0",
+		"tailwind-merge": "^2.5.3",
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
+	}
 }
