--- a/package.json
+++ b/package.json
@@ -1,52 +1,51 @@
 {
-	"name": "static-archive-viewer",
-	"version": "0.0.1",
-	"private": true,
+	"name": "orcfax-archive-viewer",
+	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"dev": "vite",
+		"build": "vite build && node --env-file=.env scripts/postbuild.js",
 		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier  --write .",
+		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.83.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@types/eslint": "^9.6.0",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
+		"@tsconfig/svelte": "^5.0.4",
+		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.8.6",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.0.0",
+		"date-fns": "^4.1.0",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.11.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"svelte": "^5.1.9",
+		"svelte-check": "^4.0.5",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.12.2",
+		"vite": "^5.4.10",
+		"vite-plugin-singlefile": "^2.0.2"
 	},
-	"type": "module",
 	"dependencies": {
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"date-fns-tz": "^3.2.0",
 		"highlight.js": "^11.10.0",
-		"jszip": "^3.10.1",
 		"lucide-svelte": "^0.451.0",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.6",
-		"svelte-headless-table": "^0.18.2",
+		"svelte-headless-table": "^0.18.3",
 		"svelte-highlight": "^7.7.0",
-		"tailwind-merge": "^2.5.3",
-		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
 	}
 }
